<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/amtrack_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:onClick="showMessageToast"
        android:text="@string/amtrack_app_name"/>

    <Button
        android:id="@+id/svar_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:onClick="showMessageToast"
        android:text="@string/svar_app_name"/>

    <Button
        android:id="@+id/popular_movies_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:onClick="showMessageToast"
        android:text="@string/popular_movies_app_name"/>

    <Button
        android:id="@+id/locate_yourself_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:onClick="showMessageToast"
        android:text="@string/locate_yourself_app_name"/>

    <Button
        android:id="@+id/shoe_maker_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:onClick="showMessageToast"
        android:text="@string/shoe_maker_app_name"/>

    <Button
        android:id="@+id/fitbit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/buttonStyle"
        android:onClick="showMessageToast"
        android:text="@string/fitbit_app_name"/>
  </LinearLayout>

</ScrollView>